--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,14 +48,13 @@ commands:
 
 
 jobs:
-
   build:
     docker:
       - image: python3.7.3-stretch
-    working-directory: ~/repo
+    working_directory: ~/repo
     steps:
-      - checkout:
-      - restore-cache:
+      - checkout
+      - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "requirements.txt" }}
             - v1-dependencies-
