--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
     docker:
       - image: docker:stable
     steps:
-      - checkout:
+      - checkout
       - run:
           name: Install Curl
           command: |
@@ -99,7 +99,7 @@ jobs:
     docker:
       - image: python3.7-alpine3.11
     steps:
-      - checkout:
+      - checkout
       - run:
           name: Install dependencies
           command: |
@@ -175,7 +175,7 @@ jobs:
             kubectl get services
             kubectl get deployments
 
-  workflows:
+workflows:
     deployment:
       jobs:
         - build
