--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
             make install
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64
             chmod +x /bin/hadolint
-      - save-cache:
+      - save_cache:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt"}}
