--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,9 +84,14 @@ jobs:
           command: |
             apk add --update curl
       - run:
+          name: Install sudo
+          command: |
+            apt-get update
+            apt-get install sudo
+      - run:
           name: Docker Build
           command: |
-            service docker start
+            sudo service docker start
             docker build -t capstone-project .
             docker tag capstone-project jcbehr/capstone-project
             docker image ls
