--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ commands:
           name: Install AWS CLI
           command: |
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip "awscliv2.zip"./aws/install
+            unzip "awscliv2.zip"
+            ./aws/install
 
   install-nodejs:
     steps:
