--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ commands:
           name: Install Kubectl
           command: |
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            install -o root -g root -m 0755 kubetctl /usr/local/bin/kubectl
-            kubectl --version client
+            install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+            kubectl version --client
 
 jobs:
   build:
