--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,8 +129,6 @@ jobs:
     steps:
       - kubernetes/install:
           kubectl-version: v1.22.0
-      - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: \<<parameters:cluster-name>>
       - run:
           name: Kube Cluster
           command: |
@@ -145,10 +143,7 @@ jobs:
         type: string
     steps:
       - checkout
-      - kubernetes/install
-      - aws-eks/update-kubeconfig-with-authenticator:
-          cluster-name: <<parameters.cluster-name>>
-          aws-region: ${AWS_DEFAULT_REGION}
+      - kubernetes/install:
           install-kubectl: true
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
