--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,8 @@ jobs:
           resource-name: deployment/capstone-project
 
   cluster-verify:
-    executor: aws-eks/python3
+    docker:
+      - image: amazon/aws-cli:latest
     parameters:
       cluster-name:
         description: |
