--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,14 +88,14 @@ jobs:
       - run:
           name: Docker Build
           command: |
-            docker build -t capstone-project .
-            docker tag capstone-project jcbehr/capstone-project
+            docker build -t capstone-project2 .
+            docker tag capstone-project2 jcbehr/capstone-project2
             docker image ls
       - run:
           name: Docker Push
           command: |
             docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" docker.io
-            docker push jcbehr/capstone-project:latest
+            docker push jcbehr/capstone-project2:latest
 
   eks-create-cluster:
     docker:
@@ -112,9 +112,9 @@ jobs:
       - run:
           name: Create EKS Cluster
           command: |
-            eksctl create cluster --name capstone-project --region us-east-1 --zones us-east-1a,us-east-1b,us-east-1c,us-east-1d
-            eksctl utils describe-stacks --region us-east-1 --cluster=capstone-project
-            eksctl get cluster --name=capstone-project --region=us-east-1
+            eksctl create cluster --name capstone-project2 --region us-east-1 --zones us-east-1a,us-east-1b,us-east-1c,us-east-1d
+            eksctl utils describe-stacks --region us-east-1 --cluster=capstone-project2
+            eksctl get cluster --name=capstone-project2 --region=us-east-1
 
   cluster-test:
     docker:
@@ -132,7 +132,7 @@ jobs:
       - run:
           name: Update Kube config
           command: |
-            aws eks update-kubeconfig --region us-east-1 --name capstone-project
+            aws eks update-kubeconfig --region us-east-1 --name capstone-project2
       - run:
           name: Kube Cluster
           command: |
@@ -144,7 +144,7 @@ jobs:
     parameters:
       cluster-name:
         description: |
-          capstone-project
+          capstone-project2
         type: string
     steps:
       - checkout
@@ -152,11 +152,15 @@ jobs:
       - run:
           name: Update Kube config
           command: |
-            aws eks update-kubeconfig --region us-east-1 --name capstone-project
+            aws eks update-kubeconfig --region us-east-1 --name capstone-project2
+      - run:
+          name: Check status
+          command: |
+            kubectl get deployments
       - kubernetes/create-or-update-resource:
           get-rollout-status: true
           resource-file-path: deployment.yml
-          resource-name: deployment/capstone-project
+          resource-name: deployment/capstone-project2
 
   cluster-verify:
     docker:
@@ -164,7 +168,7 @@ jobs:
     parameters:
       cluster-name:
         description: |
-          capstone-project
+          capstone-project22
         type: string
     steps:
       - kubernetes/install
@@ -190,14 +194,14 @@ workflows:
             requires:
               - docker-steps
         - cluster-test:
-            cluster-name: capstone-project
+            cluster-name: capstone-project2
             requires:
               - eks-create-cluster
         - cluster-deploy:
-            cluster-name: capstone-project
+            cluster-name: capstone-project2
             requires:
               - cluster-test
         - cluster-verify:
-            cluster-name: capstone-project
+            cluster-name: capstone-project2
             requires:
               - cluster-deploy
